[package]
name = "shmr"
version = "0.0.1"
edition = "2021"

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[profile.release]
debug = true
#lto = "fat"
#opt-level = 3

[dependencies]
reed-solomon-erasure = { version = "6.0", features = [ "simd-accel" ] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9.33" }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

fuser = { version = "0.14", features = ["abi-7-31"] }
seahash = "4.1"
libc = "0.2.153"
clap = { version = "4.5.3", features = ["derive"]}
rand = "0.8"
sysinfo = "0.30"
bincode = "1.3"

sled = "0.34"
chashmap = "2.2"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
