[package]
name = "shmr2"
version = "0.1.0"
edition = "2021"

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[profile.release]
debug = true
#lto = "fat"
#opt-level = 3

[dependencies]
reed-solomon-erasure = { version = "6.0", features = [ "simd-accel" ] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9.33" }
log = "0.4"
env_logger = "0.11"

fuser = { version = "0.14", features = ["abi-7-31"] }
libc = "0.2"
clap = { version = "4.5.3", features = ["derive"]}
rand = "0.8"
sysinfo = "0.30"

dashmap = "5.5"
bytesize = { version = "1.3", features = ["serde"]}

r2d2 = "0.8"
r2d2_sqlite = "0.24"
rusqlite = { version = "0.31", features = ["bundled-full", "hooks", "time", "trace"]}

#dbus = "0.9"
#dbus-codegen = "0.11"
#dbus-crossroads = "0.5"