[package]
name = "shmr2"
version = "0.0.3"
edition = "2021"

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[profile.release]
debug = true
lto = "fat"
opt-level = 3

[dependencies]
reed-solomon-erasure = { version = "6.0", features = [ "simd-accel" ] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9.33" }
log = "0.4"
env_logger = "0.11"
fuser = { version = "0.14", features = ["abi-7-31"] }
libc = "0.2"
clap = { version = "4.5.3", features = ["derive"]}
rand = "0.8"
sysinfo = "0.30"
rlimit = "0.10"
dashmap = "5.5"
bytesize = { version = "1.3", features = ["serde"]}
zstd = "0.13"
parking_lot = { version = "0.12.3", features = ["hardware-lock-elision", "arc_lock"]}
base64 = "0.22.1"
sled = { version = "1.0.0-alpha" }
dbus = "0.9"
dbus-codegen = "0.11"
dbus-crossroads = "0.5"
get-size = { version = "^0.1", features = ["derive"] }
metrics = "0.23"
metrics-util = "0.17"
metrics-exporter-prometheus = {  version = "0.15", features = ["push-gateway"] }
rayon = "1.10"
tracing = "0.1"
walkdir = "2.5.0"
ring = "0.17.8"